table showing and radio buttons

--- a/index.html
+++ b/index.html
@@ -9,30 +9,20 @@
     <body>
     <br>
     <form>
-        <input type="radio" name="More" value="More">More
-        <input type="radio" name="Less" vakye="Less">Less
+        <input type="radio" name="More" value="More" onclick="more()">More
+        <input type="radio" name="Less" value="Less" onclick="less()">Less
     </form>
     <br>
     <div class="container">
-        <div>
-            Name
-        </div>
+        <div>NAME</div>
 
-        <div> 
-            Plan
-        </div> 
+        <div>PLAN</div> 
 
-        <div> 
-            Forecast
-        </div> 
+        <div>FORECAST</div> 
 
-        <div>
-            Best Case
-        </div>
+        <div>BEST CASE</div>
 
-        <div>
-            Commit
-        </div>
+        <div>COMMIT</div>
     </div>
 
     <script src="app.js"></script>
