ascending and descending buttons working

--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
     </form>
     <br>
     <div class="container">
-        <div>NAME</div>
-
-        <div>PLAN</div> 
-
-        <div>FORECAST</div> 
-
-        <div>BEST CASE</div>
-
-        <div>COMMIT</div>
+        <div class="header" onclick="sortName()">NAME</div>
+        <div class="header" onclick="sortPlan()">PLAN</div> 
+        <div class="header" onclick="sortForeCast()">FORECAST</div> 
+        <div class="header" onclick="sortBestCase()">BEST CASE</div>
+        <div class="header" onclick="sortCommit()">COMMIT</div>
     </div>
 
     <script src="app.js"></script>
