fixed header name and id problem

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </form>
     <br>
     <div class="container">
-        <div class="name" id="header-name" onclick="sortName()" alt="name">NAME</div>
-        <div class="plan" id="header-plan" onclick="sortPlan()" alt="plan">PLAN</div> 
-        <div class="forecase" id="header-forecast" onclick="sortForeCast()" alt="forecast">FORECAST</div> 
-        <div class="best" id="header-best" onclick="sortBestCase()" alt="best">BEST CASE</div>
-        <div class="monthly" id="header-monthly" onclick="sortMonthly()" alt="monthly">MONTHLY PLAN</div>
-        <div class="commit" id="header-commit" onclick="sortCommit()" alt="commit">COMMIT </div>
-        <div class="comments" id="header-comments" onclick="sortComments()" alt="comments">COMMENTS</div>
+        <div class="h-name" id="header-name" onclick="sortName()" alt="name">NAME</div>
+        <div class="h-plan" id="header-plan" onclick="sortPlan()" alt="plan">PLAN</div> 
+        <div class="h-forecase" id="header-forecast" onclick="sortForeCast()" alt="forecast">FORECAST</div> 
+        <div class="h-best" id="header-best" onclick="sortBestCase()" alt="best">BEST CASE</div>
+        <div class="h-monthly" id="header-monthly" onclick="sortMonthly()" alt="monthly">MONTHLY PLAN</div>
+        <div class="h-commit" id="header-commit" onclick="sortCommit()" alt="commit">COMMIT </div>
+        <div class="h-comments" id="header-comments" onclick="sortComments()" alt="comments">COMMENTS</div>
 
         <button class="dropdown-button" onclick="dropdown()">click me</button>
         <div class="dropdown">
