fixed forcast showing bug

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="h-name" id="header-name" onclick="sortName()" alt="name">NAME</div>
         <div class="h-plan" id="header-plan" onclick="sortPlan()" alt="plan">PLAN</div> 
-        <div class="h-forecase" id="header-forecast" onclick="sortForeCast()" alt="forecast">FORECAST</div> 
+        <div class="h-forecast" id="header-forecast" onclick="sortForeCast()" alt="forecast">FORECAST</div> 
         <div class="h-best" id="header-best" onclick="sortBestCase()" alt="best">BEST CASE</div>
         <div class="h-monthly" id="header-monthly" onclick="sortMonthly()" alt="monthly">MONTHLY PLAN</div>
         <div class="h-commit" id="header-commit" onclick="sortCommit()" alt="commit">COMMIT </div>
