working button from created javascript element

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </form>
     <br>
     <div class="container">
-        <div class="h-name" id="header-name" onclick="sortName()" alt="name">NAME</div>
-        <div class="h-plan" id="header-plan" onclick="sortPlan()" alt="plan">PLAN</div> 
-        <div class="h-forecast" id="header-forecast" onclick="sortForeCast()" alt="forecast">FORECAST</div> 
-        <div class="h-best" id="header-best" onclick="sortBestCase()" alt="best">BEST CASE</div>
-        <div class="h-monthly" id="header-monthly" onclick="sortMonthly()" alt="monthly">MONTHLY PLAN</div>
-        <div class="h-commit" id="header-commit" onclick="sortCommit()" alt="commit">COMMIT </div>
-        <div class="h-comments" id="header-comments" onclick="sortComments()" alt="comments">COMMENTS</div>
+        <div class="h-name" id="header-name"><span onclick="sortName()">NAME</span></div>
+        <div class="h-plan" id="header-plan"><span onclick="sortPlan()">PLAN</span></div> 
+        <div class="h-forecast" id="header-forecast"><span onclick="sortForeCast()">FORECAST</span></div> 
+        <div class="h-best" id="header-best"><span onclick="sortBestCase()">BEST CASE</span></div>
+        <div class="h-monthly" id="header-monthly"><span onclick="sortMonthly()">MONTHLY PLAN</span></div>
+        <div class="h-commit" id="header-commit"><span onclick="sortCommit()">COMMIT</span></div>
+        <div class="h-comments" id="header-comments"><span onclick="sortComments()">COMMENTS</span></div>
 
-        <button class="dropdown-button" onclick="dropdown()">click me</button>
+        <!--<button class="dropdown-button" onclick="dropdown()">click me</button>-->
         <div class="dropdown">
             <h3>Selected Fields</h3>
             <hr>
